syntax = "proto3";
package sfe.app.warehouse_service.api;
option go_package = "github.com/DragonPow/Server-for-Ecommerce/app/warehouse_service/api";
import "validate/validate.proto";
import "google/rpc/code.proto";
import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";
//-------------------------end generated header---------------------------//

// WarehouseService
service WarehouseService {
  // Test
  rpc Test(TestRequest) returns (TestResponse) {
    option (google.api.http) = {
      get: "/api/v1/cell"
    };
  }
}

message TestRequest {

}

message  TestResponse {

}